--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
   <script src="lib/php-mail-form/validate.js"></script>
   <script src="lib/easing/easing.min.js"></script>
   <script src="lib/chart/chart.js"></script>
+  <script src="js/index.js"></script>
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
