--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="container">
             <h3>議事録</h3>
               <div class="form-group ">
-                <textarea readonly="" id="messageId" rows="10" cols="60"></textarea>
+                <textarea style="width:100%;" readonly="" id="messageId" rows="10" cols="60"></textarea>
             <!-- <text name="messageName" id="messageId" cols="30" rows="5" class="form-control" placeholder="議事録"></text>-->
             <!--<a class="btn btn-primary btn-lg" id="download">ファイルダウンロード</a>-->
           </div>
